# TD4-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  td4.circ  td4m.circ
include/: console.hpp  cpu.hpp  emu.hpp  logic.hpp
schemes/: td4.circ  td4m.circ
src/: .simple_emulator.c.swp  advanced_emulator.c  advanced_emulator_m.cpp  asm_code  assembly_compiler.cpp  console.cpp  cpu.cpp  emu.cpp  logic.cpp  simple_emulator.c  str_to_bin.c
